--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="vendors/css/normalize.css">
+    <link rel="stylesheet" href="vendors/css/grid.css">
     <link rel="stylesheet" href="resources/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">
 
@@ -13,7 +14,10 @@
 </head>
 
 <body>
-    <h1>Omnifood</h1>
+    <div class="row">
+        <h1>Omnifood</h1>
+    </div>
+
 
 </body>
 
