Building the how-it-works section -css

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </section>
 
     <section class="section-meals">
-        <ul class="meals-showcase">
+        <ul class="meals-showcase clearfix">
             <li>
                 <figure class="meal-photo">
                     <img src="resources/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
@@ -97,7 +97,7 @@
             </li>
         </ul>
 
-        <ul class="meals-showcase">
+        <ul class="meals-showcase clearfix">
             <li>
                 <figure class="meal-photo">
                     <img src="resources/img/5.jpg" alt=" Paleo beef steak with vegetables ">
@@ -128,11 +128,11 @@
         </div>
 
         <div class="row">
-            <div class="col span-1-of-2">
+            <div class="col span-1-of-2 steps-box">
                 <img src="resources/img/app-iPhone.png" alt="Omnifood app on iphone" class="app-screen">
 
             </div>
-            <div class="col span-1-of-2">
+            <div class="col span-1-of-2 steps-box">
 
                 <div class="works-step">
                     <div>1</div>
