--- a/index.html
+++ b/index.html
@@ -352,6 +352,121 @@
     </section>
 
 
+    <section class="sectiom-form">
+        <div class="row">
+            <h2> We're happy to hear from you </h2>
+
+        </div>
+
+
+        <div class="row">
+
+            <form method="post" action="#" class="contact-form">
+
+
+                <div class="row">
+
+                    <div class="col span-1-of-3">
+                        <label> Name</label>
+                    </div>
+
+                    <div class="col span-2-of-3">
+                        <input type="text" name="name" id="name" placeholder="Your name" required>
+                    </div>
+
+                </div>
+
+
+
+                <div class="row">
+
+                    <div class="col span-1-of-3">
+                        <label> Email</label>
+                    </div>
+
+                    <div class="col span-2-of-3">
+                        <input type="email" name="email" id="email" placeholder="Your email" required>
+                    </div>
+
+                </div>
+
+
+
+                <div class="row">
+
+                    <div class="col span-1-of-3">
+                        <label> How did you find us?</label>
+                    </div>
+
+                    <div class="col span-2-of-3">
+                        <select name="find-us" id="find-us">
+
+                            <option value="friends"> Friends</option>
+                            <option value="search" selected> Search engine</option>
+                            <option value="ad"> Advertisement</option>
+                            <option value="others"> Other</option>
+
+                        </select>
+                    </div>
+
+                </div>
+
+
+
+
+                <div class="row">
+
+                    <div class="col span-1-of-3">
+                        <label>Newsletter?</label>
+                    </div>
+
+                    <div class="col span-2-of-3">
+                        <input type="checkbox" name="news" id="news" checked> Yes, please
+
+                    </div>
+
+                </div>
+
+
+
+                <div class="row">
+
+                    <div class="col span-1-of-3">
+                        <label> Drop us a line</label>
+                    </div>
+
+                    <div class="col span-2-of-3">
+                        <textarea name="message" placeholder="Your message"></textarea>
+
+                    </div>
+
+                </div>
+
+
+
+                <div class="row">
+
+                    <div class="col span-1-of-3">
+                        <label> &nbsp;</label>
+                    </div>
+
+                    <div class="col span-2-of-3">
+                        <input type="submit" value="Send it!">
+
+                    </div>
+
+                </div>
+
+
+
+
+            </form>
+
+        </div>
+
+    </section>
+
+
 </body>
 
 </html>
