--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <header>
-        <nav class="sticky">
+        <nav>
             <div class="row">
                 <img src="resources/img/logo-white.png" alt="Omnifood logo" class="logo">
                 <img src="resources/img/logo.png" alt="Omnifood logo" class="logo-black">
@@ -43,7 +43,7 @@
         </div>
 
     </header>
-    <section class="section-features">
+    <section class="section-features js--section-features">
         <div class="row">
             <h2> Get food fast &mdash; not fast food. </h2>
             <p class="long-copy">
@@ -519,9 +519,11 @@
 
 
 
-
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="vendors/js/jquery.waypoints.min.js"></script>
     <script src="resources/js/script.js"></script>
+
 
 
     <!-- ------------------------- -->
