--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 <img src="resources/img/logo.png" alt="Omnifood logo" class="logo-black">
 
                 <ul class="main-nav">
-                    <li><a href="#"> Food delivery</a> </li>
-                    <li><a href="#"> How it works</a> </li>
-                    <li><a href="#"> Our Cities</a> </li>
-                    <li><a href="#"> Sign up</a> </li>
+                    <li><a href="#features"> Food delivery</a> </li>
+                    <li><a href="#works"> How it works</a> </li>
+                    <li><a href="#cities"> Our Cities</a> </li>
+                    <li><a href="#plans"> Sign up</a> </li>
                 </ul>
 
 
@@ -38,12 +38,12 @@
         </nav>
         <div class="hero-text-box">
             <h1>Goodbye junk food.<br> Hello super healthy meals. </h1>
-            <a class="btn btn-full" href="#">I’m hungry </a>
-            <a class="btn btn-ghost" href="#">Show me more </a>
+            <a class="btn btn-full js--scroll-to-plans" href="#">I’m hungry </a>
+            <a class="btn btn-ghost js--scroll-to-start" href="#">Show me more </a>
         </div>
 
     </header>
-    <section class="section-features js--section-features">
+    <section class="section-features js--section-features" id="features">
         <div class="row">
             <h2> Get food fast &mdash; not fast food. </h2>
             <p class="long-copy">
@@ -127,7 +127,7 @@
         </ul>
     </section>
 
-    <section class="section-steps">
+    <section class="section-steps" id="works">
         <div class="row">
             <h2>How it works &mdash; Simple as 1, 2, 3</h2>
 
@@ -164,7 +164,7 @@
         </div>
     </section>
 
-    <section class="section-cities">
+    <section class="section-cities" id="cities">
         <div class="row">
             <h2>We're currently in these cities </h2>
         </div>
@@ -287,7 +287,7 @@
         </div>
     </section>
 
-    <section class="section-plans">
+    <section class="section-plans js--section-plans " id="plans">
         <div class="row">
             <h2>Start eating healthy today </h2>
         </div>
